<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#21D347">

            <Button
                android:id="@+id/Back_bt"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginLeft="0dp"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:text="＜ Back"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/ConnectedDevice_tv"
                android:layout_width="326dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Connected Device"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textAllCaps="false"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/Add_bt"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:text="Add"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>
        <GridLayout
            android:id="@+id/main_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingBottom="15dp">

            <TextView
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:text="@string/label_bluetooth_le_status"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/main_ble_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="28dp"
                android:layout_row="0"
                android:gravity="right"
                android:text="@string/not_supported"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_row="1"
                android:text="@string/label_bluetooth_status"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/main_ble_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="28dp"
                android:layout_row="1"
                android:gravity="right"
                android:text="@string/off"
                android:textSize="20sp"/>
        </GridLayout>

        <View
            android:id="@+id/upperSepparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/connected_info_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <View
                    android:id="@+id/lowerSepparator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_blue_dark"/>
                <TextView
                    android:id="@+id/connected_device_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/formatter_item_count"
                    android:textSize="12sp"/>

                <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="55dp"-->
                    <!--android:orientation="horizontal">-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginLeft="15dp"-->
                        <!--android:layout_marginRight="15dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageView-->
                            <!--android:id="@+id/Homeiv"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_weight="1"-->
                            <!--android:background="#00000000"-->
                            <!--android:src="@drawable/home" />-->

                        <!--<TextView-->
                            <!--android:id="@+id/Hometv"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_gravity="center"-->
                            <!--android:text="Home"-->

                            <!--/>-->
                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginLeft="15dp"-->
                        <!--android:layout_marginRight="15dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageView-->
                            <!--android:id="@+id/Liveiv"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_weight="1"-->
                            <!--android:background="#00000000"-->
                            <!--android:src="@drawable/live" />-->

                        <!--<TextView-->
                            <!--android:id="@+id/Livetv"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_gravity="center"-->
                            <!--android:text="Live"-->

                            <!--/>-->
                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_marginLeft="15dp"-->
                        <!--android:layout_marginRight="15dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageView-->
                            <!--android:id="@+id/Historyiv"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_weight="1"-->
                            <!--android:background="#00000000"-->
                            <!--android:src="@drawable/history" />-->

                        <!--<TextView-->
                            <!--android:id="@+id/Historytv"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_gravity="center"-->
                            <!--android:text="History"-->

                            <!--/>-->
                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginLeft="15dp"-->
                        <!--android:layout_marginRight="15dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageView-->
                            <!--android:id="@+id/Activitiesiv"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_weight="1"-->
                            <!--android:background="#00000000"-->
                            <!--android:src="@drawable/exercise" />-->

                        <!--<TextView-->
                            <!--android:id="@+id/Activitiestv"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_gravity="center"-->
                            <!--android:text="Activities"-->


                            <!--/>-->
                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginLeft="15dp"-->
                        <!--android:layout_marginRight="15dp"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageView-->
                            <!--android:id="@+id/Meiv"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_weight="1"-->
                            <!--android:background="#00000000"-->
                            <!--android:src="@drawable/myfilled" />-->

                        <!--<TextView-->
                            <!--android:id="@+id/Metv"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_gravity="center"-->
                            <!--android:background="#00000000"-->
                            <!--android:text="Me"-->


                            <!--/>-->
                    <!--</LinearLayout>-->
                <!--</LinearLayout>-->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/connected_list_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/connected_info_linear"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <ListView
                    android:id="@android:id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:scrollbars="none"/>

                <TextView
                    android:id="@android:id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/no_connected_device"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
